# ScrabbleBot

./: .gitignore  ArmController.cpp  ArmController.h  CMakeLists.txt  DictTrie.cpp  DictTrie.h  Dictionary.cpp  Dictionary.h  LetterRip.cpp  LetterRip.h  PlayerManager.cpp  PlayerManager.h  README.md  TrieNode.cpp  TrieNode.h  board.cpp  board.h  definitions.h  dictionary.txt  game.cpp  game.h  main.cpp  makefile  myDictionary.cpp  myDictionary.h  pile.cpp  pile.h  scrabbleBot  trie.h
dawgdic/: dictionary.h
